@@ -2,6 +2,8 @@
  - build: bump dclab from 0.29.1 to 0.32.4 (this should have happened
    in the 2.5.0 release which introduced R-lme4 analysis)
  - ref: key [calculation]: "emodulus model" is deprecated in dclab
+ - ref: use "lut_identifier" instead of deprecated "method" keyword when
+   retrieving isoelasticity lines
 2.5.0
  - feat: implement linear-mixed effects models with R/lme4 (#55)
  - ci: overhauled build process
